style/custom.css
body,
h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: "Lato", sans-serif
}

.w3-bar,
h1,
button {
  font-family: "Montserrat", sans-serif
}

.fa-anchor,
.fa-coffee {
  font-size: 200px
}

.custom-event {
    padding-right: 2%;
}

.w3-twothird-center{
    width: 55%;
    display: block;
    margin-left: 5%;
    margin-right: 5%;
}

